Safari365 Prod/src/objects/NCT__c.object
<CustomObject>
    <fields>
        <fullName>CATEGORYTYPE__c</fullName>
        <label>CATEGORY TYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPY_TO_BOOKING__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COPY TO BOOKING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <label>DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMATTYPE__c</fullName>
        <label>FORMAT TYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNETENABLED__c</fullName>
        <label>INTERNET ENABLED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MULTIPLE__c</fullName>
        <label>MULTIPLE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTECATEGORY__c</fullName>
        <externalId>true</externalId>
        <label>NOTECATEGORY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPLATE__c</fullName>
        <label>TEMPLATE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>NCT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DESCRIPTION__c</columns>
        <columns>CATEGORYTYPE__c</columns>
        <columns>NOTECATEGORY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCT-{00000000}</displayFormat>
        <label>NCT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>